# cocoatly

./: .cocoatlyrc  COCOATLY_ARCHITECTURE.md  LICENSE  bitmaps.devrc  de.fetcher.rs  dependency.devrc  devrc.py  predefines.devrc  preset_app.devrc
cocoatly-python/: README.md  requirements.txt  setup.py
cocoatly-python/cocoatly/: __init__.py
cocoatly-python/cocoatly/bridge/: __init__.py  rust_bridge.py
cocoatly-python/cocoatly/cli/: main.py
cocoatly-python/cocoatly/core/: __init__.py  config.py  exceptions.py  models.py
cocoatly-python/cocoatly/plugins/: __init__.py  plugin_manager.py
cocoatly-python/cocoatly/registry/: __init__.py  api.py  client.py
cocoatly-python/cocoatly/resolver/: __init__.py  dependency_resolver.py
cocoatly-rust/: BUILD.md  Cargo.toml
cocoatly-rust/benches/: benches.rs
cocoatly-rust/crates/cocoatly-cli-bridge/: Cargo.toml
cocoatly-rust/crates/cocoatly-cli-bridge/src/: lib.rs  output.rs
cocoatly-rust/crates/cocoatly-compression/: Cargo.toml
cocoatly-rust/crates/cocoatly-compression/src/: lib.rs
cocoatly-rust/crates/cocoatly-core/: Cargo.toml
cocoatly-rust/crates/cocoatly-core/src/: config.rs  error.rs  lib.rs  manifest.rs  registry.rs  state.rs  types.rs
cocoatly-rust/crates/cocoatly-crypto/: Cargo.toml
cocoatly-rust/crates/cocoatly-crypto/src/: hash.rs  lib.rs  signature.rs  verify.rs
cocoatly-rust/crates/cocoatly-downloader/: Cargo.toml
cocoatly-rust/crates/cocoatly-downloader/src/: lib.rs
cocoatly-rust/crates/cocoatly-fs/: Cargo.toml
cocoatly-rust/crates/cocoatly-fs/src/: lib.rs
cocoatly-rust/crates/cocoatly-installer/: Cargo.toml
cocoatly-rust/crates/cocoatly-installer/src/: install.rs  lib.rs  uninstall.rs  update.rs  verify.rs
supabase/migrations/: 20251006035716_create_package_registry_schema.sql
