[workspace]
members = [
    "crates/cocoatly-core",
    "crates/cocoatly-installer",
    "crates/cocoatly-crypto",
    "crates/cocoatly-fs",
    "crates/cocoatly-downloader",
    "crates/cocoatly-compression",
    "crates/cocoatly-cli-bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cocoatly Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1.5"
sha2 = "0.10"
ring = "0.17"
flate2 = "1.0"
tar = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
