[package]
name = "cocoatly-downloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cocoatly-core = { path = "../cocoatly-core" }
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
